compiler/driver/tests/snapshots/diagnostics_snapshots__diag_self_outside_impl.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E002]: undefined variable `self`
  --> diag_self_outside_impl.ny:1:19
   |
  1 | fn main() { print(self) }
   |                   ^^^^
   = label: `self` is not in scope
